--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,3 +1,9 @@
+cmake_minimum_required(VERSION 3.16)
+
+if(COMMAND cmake_policy)
+  cmake_policy(SET CMP0003 NEW)
+endif(COMMAND cmake_policy)
+
 project(alledge)
 
 file(GLOB alledge_SRC CONFIGURE_DEPENDS "src/*.cpp")
