Added build for larger projects

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,3 +18,12 @@ foreach(file ${files})
   add_executable(example_${n} ${file})
   target_link_libraries(example_${n} alledge GL GLU glut allegro allegro_image allegro_font allegro_ttf allegro_primitives allegro_dialog)
 endforeach()
+
+file(GLOB projects "projects/*")
+foreach(p ${projects})
+  get_filename_component(n ${p} NAME_WE)
+  message(STATUS "${n}")
+  file(GLOB p_SRC CONFIGURE_DEPENDS "${p}/*.cpp")
+  add_executable(${n} ${p_SRC})
+  target_link_libraries(${n} alledge GL GLU glut allegro allegro_image allegro_font allegro_ttf allegro_primitives allegro_dialog)
+endforeach()
